other/mutate-large-termination-gps/.kyverno-test/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-pod01
spec:
  containers: 
  - name: busybox
    image: busybox:1.28
  terminationGracePeriodSeconds: 60
---
apiVersion: v1
kind: Pod
metadata:
  name: demo-pod02
spec:
  containers: 
  - name: busybox
    image: busybox:1.28
