other/mutate-large-termination-gps/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: mutate-termination-grace-period-seconds
policies:
- ../mutate-large-termination-gps.yaml
resources:
- resource.yaml
results:
- kind: Pod
  patchedResources:
  - patchedResource1.yaml
  policy: mutate-termination-grace-period-seconds
  resources:
  - demo-pod01
  result: pass
  rule: mutate-termination-grace-period-seconds
- kind: Pod
  patchedResources:
  - patchedResource2.yaml
  policy: mutate-termination-grace-period-seconds
  resources:
  - demo-pod02
  result: skip
  rule: mutate-termination-grace-period-seconds
